Tweaks from David.

--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -3,23 +3,21 @@
 {% block content %}
 
 <h1 class="lowerer">MBMT Official Contest Rules</h1>
-<p>
-Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a free middle school math contest that seeks to inspire students’ interest in mathematics and to encourage them to explore math beyond the school curriculum. This year, MBMT will be hosted at Montgomery Blair High School (MBHS) on April 1st, 2017. This packet includes all the information about the competition, as well as contact information in case you have additional questions.
-</p>
+<p>Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a free middle school math contest that seeks to inspire students’ interest in mathematics and to encourage them to explore math beyond the school curriculum. This year, MBMT will be hosted at Montgomery Blair High School (MBHS) on April 1st, 2017. This page includes all the information about the competition. Contact information can be found on the <a href="/info"> information page</a>.</p>
 
 <a name="registration"></a><h3>Registration</h3>
 <ol class="top"> 
-    <li>Participants in MBMT compete in teams of 5 (with some exceptions, discussed further in IIb, IId). The math team sponsors of each school/organization register individual student teams through the Official Registration Form sent in a previous email. There is no limit to the number of full teams a school or organization may send.</li>
-    <li><b class="red">Subject Tests are specifically limited</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting. More information about the Subject Tests can be found in section IIIa.</li>
+    <li>Participants in MBMT compete in teams of 5 (with some exceptions, discussed further in IIb, IId). The math team sponsors of each school/organization register individual student teams through the website via the <a href="/register">registration page</a>. There is no limit to the number of full teams a school or organization may send.</li>
+    <li><b class="red">Subject Tests are specifically limited</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting. More information about the Subject Tests can be found on the <a href="/topics">topics page</a>.</li>
     <ol>
         <li>Each full team of 5 will be required to have at least 2 tests per subject. For example, it is not allowed to have only one student on a team of 5 take the Algebra Subject Test.</li>
         <li>A team of 4 will be required to have at least 1 test per subject, but no more than 3 tests per subject.</li>
         <li>A team of 3 will only be required to have at least 1 test per subject.</li>
         <li>Teams of 1 or 2 have no restrictions; however, refer to section IId. for more information on teams of 1 or 2.</li>
     </ol>
-    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, <strong>Pascal</strong>, or Division B, <strong>Ramanujan.</strong> Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b> (discussed further in Section III).</li>
-    <li>If there are fewer than 5 students interested in participating, you may register incomplete teams. For an incomplete team’s Team and Guts round scores to be officially considered, incomplete teams must have <b>at least 3 students</b>. Teams with one or two students may compete, but their Team and Guts round will not be officially graded. As with the previous two years, <b>we do not</b> allow organizations to register both a complete and an incomplete team in the same division.</li>
-    <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of students from multiple schools, home-school groups, and community activity groups to name a few.</li>
+    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, “Pascal,” or Division B, “Ramanujan.” Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b> (discussed further on the  <a href="/topics">topics page</a>).</li>
+    <li>If there are fewer than 5 students interested in participating, you may register incomplete teams. For an incomplete team’s Team and Guts round scores to be officially considered, incomplete teams must have <b>at least 3 students</b>. Teams with one or two students may compete, but their Team and Guts round will not be officially graded.</li>
+    <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of students from multiple schools, home-school groups, and community activity groups, to name a few.</li>
     <li>We <b>do not</b> allow elementary school students to participate in MBMT. </li>
     <li>Finally, <b>any school or organization with students in grades 6-8 can register and attend</b>.</li>
 </ol>
@@ -28,7 +26,7 @@ Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a f
 <ol class="top">
     <li><b>The Subject Test round</b> consists of eight questions on one subject and lasts thirty minutes. The subjects are <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>.</li>
     <li><b>The Team round</b> contains fifteen questions for all team members to collaboratively solve in half an hour.</li>
-    <li><b>The Guts round</b> is an intense but exciting round in which competing teams can see each others’ progress. It is 45 minutes long, is graded live, and requires each team to work together on progressively harder five-problem sets. Each new set is worth more points than the previous set. This year, <b class="red">different divisions will have different Guts round questions</b>. Note that <b>there are no benefits of turning in the last set early</b>. There are no bonus points for timing. Please also note that <b class="red">the weighting system for the later problems has been tweaked</b> to more accurately reflect difficulty.
+    <li><b>The Guts round</b> is an intense but exciting round in which competing teams can see each others’ progress. It is 60 minutes long, is graded live, and requires each team to work together on progressively harder five-problem sets. Each new set is worth more points than the previous set. This year, <b class="red">different divisions will have different Guts round questions</b>. Note that <b>there are no benefits of turning in the last set early</b>. There are no bonus points for timing. Please also note that <b class="red">the weighting system for the later problems has been tweaked</b> to more accurately reflect difficulty.
     <li><b>The Fun round</b> is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.</li>
 </ol>
 
@@ -49,7 +47,7 @@ Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a f
 <li>Students are also ranked individually in the subject tests. The <strong>top 3 individuals</strong> of each subject test in each division are recognized. These scores are calculated through a method that accounts for test item difficulty and normalizes the scores between tests.</li>
 <li>High-placement ties will be broken using tiebreaker rounds. Tiebreaker rounds will be held in the grading room during the activity.</li>
 <li>The <strong>team score</strong> is a weighted sum of the individual, Team Round, and Guts Round scores. The <strong>top 5 teams</strong> in each division will be recognized.</li>
-<li>The highest scoring 6th grade student will receive the <strong>Eric Walstein Award</strong>, in honor of Mr. Eric Walstein, former math teacher and math team coach at Blair.</li>
+<li>The highest scoring 6th grade student in the Pascal division will receive the <strong>Eric Walstein Award</strong>, in honor of Mr. Eric Walstein, former math teacher and math team coach at Blair.</li>
 </ol>
 
 {% endblock %}
