--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -77,4 +77,6 @@ This website, as well as the MBMT internal scoring system, is written by
 
 <h2>Sponsors</h2>
 
+<p>MBMT is sponsored by the Magnet Foundation.</p>
+
 {% endblock %}
