--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,21 +6,20 @@
 
 <br/>
 
-<p class="main-text">
-    <span class="text-muted">The</span>
-    <strong>Montgomery Blair Math Tournament</strong>. <br/><br/>
-    <span class="text-muted">A</span>
+<p class="main-text" style="font-family: 'Slabo 27px'; font-size: 36px; margin-bottom: 0;">
+    The Montgomery Blair Math Tournament
+</p>
+<p class="main-text" style="margin: 0 auto; max-width: 820px; padding-bottom: 2em;">
+    <span class="text-muted" >A</span>
     <strong>mathematics competition</strong>
     <span class="text-muted">for</span>
     <strong>middle school students</strong>
     <span class="text-muted">in the</span>
     <strong>Maryland area</strong>
     <span class="text-muted">on</span>
-    <strong>Saturday, April 1st, 2017</strong>.</p>
-
-<br/>
-<button class="btn btn-danger btn-register" onclick="window.location.href='{% url 'register' %}';">Register here!</button>
-<br/><br/>
+    <strong>Saturday, April 1st, 2017</strong>.
+    <a href="{% url 'register' %}" style="color: #ba2222">Register &#x276f;</a>
+</p>
 
 <div class="row">
     <div class="col-lg-4">
