Added better validation and division choice.

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -9,7 +9,7 @@ Welcome to the 3rd Annual MBMT, held on April 1st, 2017! We highly encourage sch
 </p>
 
 <form name="registration" data-toggle="validator" role="form" method="post">
-    <script src="/app/static/js/validator.min.js"></script>
+    <script src="/static/js/validator.min.js"></script>
 
     {% crispy form %}
     
