Added shirt size.

--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -8,6 +8,8 @@
     <tr style="background-color: #f9f9f9;">
         <th>Name</th>
         <th>Members</th>
+        <th>Tests</th>
+        <th>Shirt Sizes</th>
     </tr>
     {% for team in request.user.school.teams.all %}
     <tr>
@@ -19,14 +21,35 @@
         <td>
             <ul>
                 {% for student in team.students.all %}
-                    <li>{{ student.name }} ({{ student.get_subject1_display }}, {{ student.get_subject2_display }})</li>
+                <li>
+                    {{ student.name }}
+                </li>
                 {% endfor %}
             </ul>
         </td>
-    </tr>
+        <td>
+            <ul>
+                {% for student in team.students.all %}
+                <li>
+                    {{ student.get_subject1_display }}, {{ student.get_subject2_display }}
+                </li>
+                {% endfor %}
+            </ul>
+        </td>
+        <td>
+            <ul>
+                {% for student in team.students.all %}
+                <li>
+                    {{ student.get_size_display }}
+                </li>
+                {% endfor %}
+            </ul>
+        </td>    </tr>
     {% endfor %}
     <tr>
         <td><a href="{% url 'edit_team' %}">+ Add Team</a></td>
+        <td></td>
+        <td></td>
         <td></td>
     </tr>
 </table>
