Added archived answer keys.

--- a/app/templates/archive.html
+++ b/app/templates/archive.html
@@ -31,32 +31,71 @@ a round since we haven't done every round every year. In each year, the more dif
             <tr>
                 <th rowspan="2">2016</th>
                 <th>Euclid</th>
-                <td><a href="{% static 'archive/2016/euclid/alg.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/euclid/geo.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/euclid/cp.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/euclid/nt.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/euclid/sprint.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/euclid/team.pdf' %}" target="_blank">Problems</a></td>
+                <td>
+                    <a href="{% static 'archive/2016/euclid/al.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/euclid/al_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/euclid/ge.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/euclid/ge_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/euclid/cp.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/euclid/cp_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/euclid/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/euclid/nt_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/euclid/sprint.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/euclid/sprint_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/euclid/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/euclid/team_key.pdf' %}" target="_blank">Key</a>
+                </td>
                 <td>N/A</td>
-                <td rowspan="2"><a href="{% static 'archive/2016/guts.pdf' %}" target="_blank">Problems</a></td>
+                <td rowspan="2">
+                    <a href="{% static 'archive/2016/guts.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Key</a>
+                </td>
             </tr>
 
             <tr>
                 <th>Lobachevsky</th>
-                <td><a href="{% static 'archive/2016/lobachevsky/alg.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/lobachevsky/geo.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/lobachevsky/cp.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/lobachevsky/nt.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/lobachevsky/sprint.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2016/lobachevsky/team.pdf' %}" target="_blank">Problems</a></td>
+                <td>
+                    <a href="{% static 'archive/2016/lobachevsky/al.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/al_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/lobachevsky/ge.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/ge_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/lobachevsky/cp.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/cp_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/lobachevsky/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/nt_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/lobachevsky/sprint.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/sprint_key.pdf' %}" target="_blank">Key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2016/lobachevsky/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/team_key.pdf' %}" target="_blank">Key</a>
+                </td>
                 <td>N/A</td>
             </tr>
 
             <tr>
                 <th rowspan="2">2015</th>
                 <th>Fermat</th>
-                <td><a href="{% static 'archive/2015/fermat/alg.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2015/fermat/geo.pdf' %}" target="_blank">Problems</a></td>
+                <td><a href="{% static 'archive/2015/fermat/al.pdf' %}" target="_blank">Problems</a></td>
+                <td><a href="{% static 'archive/2015/fermat/ge.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/fermat/cp.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/fermat/nt.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/fermat/sprint.pdf' %}" target="_blank">Problems</a></td>
@@ -67,8 +106,8 @@ a round since we haven't done every round every year. In each year, the more dif
 
             <tr>
                 <th>Euler</th>
-                <td><a href="{% static 'archive/2015/euler/alg.pdf' %}" target="_blank">Problems</a></td>
-                <td><a href="{% static 'archive/2015/euler/geo.pdf' %}" target="_blank">Problems</a></td>
+                <td><a href="{% static 'archive/2015/euler/al.pdf' %}" target="_blank">Problems</a></td>
+                <td><a href="{% static 'archive/2015/euler/ge.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/euler/cp.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/euler/nt.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/euler/sprint.pdf' %}" target="_blank">Problems</a></td>
