Fixed shirt size report.

--- a/app/templates/shirts.html
+++ b/app/templates/shirts.html
@@ -5,7 +5,7 @@
 
 <h1>Shirt Size Report</h1>
 <table>
-    {% for size in sizes.items %}
+    {% for size in sizes %}
     <tr>
         <td style="padding-right: 1em;">{{ size.0 }}</td>
         <td>{{ size.1 }}</td>
