--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,6 +37,7 @@
                     <ul class="nav navbar-nav navbar-right">
                     {% if request.user.is_authenticated %}
                     {% if perms.app.can_grade %}
+                        <li><a href="{% url 'attendance' %}">Attendance</a></li>
                         <li><a href="{% url 'grade_students' %}">Grading</a></li>
                     {% else %}
                         <li><a href="{% url 'teams' %}">My Teams</a></li>
