--- a/grading/templates/grade.teams.html
+++ b/grading/templates/grade.teams.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load grading_status %}
 
 {% block extrahead %}
 <style>body { overflow-y: scroll; }</style>
@@ -18,6 +19,7 @@
     <tr>
         <th class="number">#</th>
         <th class="information">Info</th>
+        <!--th class="students">Students</th-->
         <th class="division">Division</th>
         <th class="team">Team</th>
         <th class="guts">Guts</th>
@@ -27,13 +29,18 @@
         <tr>
             <td class="number">{{ forloop.counter }}</td>
             <td class="name">{{ team.name }} <br> <span class="italics">{{ team.school.name }}</span></td>
+            <!--td class="students">{{ team.get_students_display }}</td-->
             <td class="division">{{ team.get_division_display }}</td>
             <td class="team">
-                <br>
+                {% autoescape off %}
+                {{ team|grading_status:"team" }}
+                {% endautoescape %}<br>
                 <a href="{% url "score" grouping="team" id=team.id round="team" %}">edit</a>
             </td>
             <td class="guts">
-                <br>
+                {% autoescape off %}
+                {{ team|grading_status:"guts" }}
+                {% endautoescape %}<br>
                 <a href="{% url "score" grouping="team" id=team.id round="guts" %}">edit</a>
             </td>
         </tr>
